Fixing layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -109,7 +109,7 @@ a {
 .app-container {
   display: flex;
   flex-direction: column;
-  /* height: 100%; */
+  height: 100%;
   min-height: 100vh;
 }
 
@@ -140,7 +140,7 @@ a {
 footer {
   display: flex;
   align-items: center;
-  margin-top: auto;
+  /* margin-top: auto; */
   box-shadow: 0 0 5px #e5e5e5;
 }
 
